--- a/VTiger/pom.xml
+++ b/VTiger/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>webdrivermanager</artifactId>
 			<version>4.4.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.0.8</version>
+		</dependency>
 
 
 	</dependencies>
